--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ nav a {
     aspect-ratio: 1/1;
 }
 
-/*MAIN =================================================================================================*/
+/*MAIN ======================================================================================================*/
 
 /*PORTFOLIO =================================================================================================*/
 
@@ -128,14 +128,17 @@ nav a {
 
     filter: drop-shadow(5px 5px 0px);
 
-    padding: 1rem;
+    padding: 2rem;
     margin-top: 1rem;
 
-}
+    flex: 1;
 
-.portfolio-card:hover {
-    transform: translateX(1px) translateY(1px);
-    filter: drop-shadow(4px 4px 0px);
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+
 }
 
 .portfolio-card p {
@@ -181,6 +184,8 @@ nav a {
 
 #contact-options-container img{
     height: 15vw;
+
+    filter: drop-shadow(4px 4px 0 var(--primary));
 }
 
 /*FOOTER =================================================================================================*/
@@ -193,6 +198,7 @@ footer {
     flex-direction: column;
 
     justify-content: end;
+    align-items: center;
 
     padding: 2rem;
 }
